[package]
name = "find_empty_block"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "a tool of rebuild sectors"
homepage = "https://www.baidu.com/"
keywords = ["hello", "world"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
positioned-io = "0.2.2"
rayon = "1.0.0"
